--- a/GodotGenerator.Attributes/Attributes.csproj
+++ b/GodotGenerator.Attributes/Attributes.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
+		<RootNamespace>Generator</RootNamespace>
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 </Project>
