--- a/GodotGenerator.Generators/Generators.csproj
+++ b/GodotGenerator.Generators/Generators.csproj
@@ -21,15 +21,24 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
+		
+		<ProjectReference Include="..\GodotGenerator.Attributes\Attributes.csproj" OutputItemType="Analyzer" PrivateAssets="all" />
 	</ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\GodotGenerator.Attributes\Attributes.csproj" />
-	</ItemGroup>
+	<PropertyGroup>
+		<GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
+	</PropertyGroup>
 
+	<Target Name="GetDependencyTargetPaths">
+		<ItemGroup>
+			<None Include="$(OutputPath)\$(AssemblyName).dll" PackagePath="analyzers/dotnet/cs" Visible="false" Pack="true" />
+
+			<None Include="$(OutputPath)\Attributes.dll" PackagePath="analyzers/dotnet/cs" Visible="false" Pack="true" />
+			<None Include="$(OutputPath)\Attributes.dll" PackagePath="lib/netstandard2.0" Visible="true" Pack="true" />
+		</ItemGroup>
+	</Target>
+	
+	
 </Project>
