--- a/GodotGenerator.Attributes/Attributes.csproj
+++ b/GodotGenerator.Attributes/Attributes.csproj
@@ -3,5 +3,6 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>11.0</LangVersion>
 		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 </Project>
